[package]
name = "dioxus-todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "web"] }
dioxus-desktop = "0.7.3"
dioxus-web = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cfg-if = "1.0"
web-sys = { version = "0.3.70", features = ["Storage", "Window"] }
